# pixelmagic

./: .buildconfig  .gitignore  meson.build
src/: main.cpp  meson.build
